[package]
name = "gws"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
google-drive3 = "*"
hyper = "0.14.26"
hyper-rustls = "0.24.0"
regex = "1.8.1"
serde = "^1.0"
serde_json = "^1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
